tests/fixtures/invalid/set_in_int.py
# Cannot use 'in' with Set[int] and Int
x: bool = {1, 2, 3} in 1
